--- a/app/views/shared/component/_article_card.slim
+++ b/app/views/shared/component/_article_card.slim
@@ -1,16 +1,17 @@
 
 .card.boarder.text-left
-  = link_to article_path(article), class: 'card-body'
-    h4.card-title = article.title
-    - unless article.overview.nil?
-      p.card-subtitle.text-muted = article.overview
-    = set_thumbnail(article, class_name: 'card-image-top mx-auto w-90')
-    p.card-link タグも入ります
-    p
-      span
-        i.fas.fa-star
-        | 120
-        i.fas.fa-comment-dots
-        | 30
-      span.text-muted.text-right 1時間前
+  = link_to article_path(article)
+    .card-body
+      h4.card-title = article.title
+      - unless article.overview.nil?
+        p.card-subtitle.text-muted = article.overview
+      = set_thumbnail(article, class_name: 'mx-auto w-100')
+      p.card-link タグも入ります
+      p
+        span
+          i.fas.fa-star
+          | 120
+          i.fas.fa-comment-dots
+          | 30
+        span.text-muted.text-right 1時間前
   = set_user_link article.user, class_name: 'card-footer'
