--- a/app/views/shared/component/_capsule_toys.html.slim
+++ b/app/views/shared/component/_capsule_toys.html.slim
@@ -1,4 +1,4 @@
 .card.mb-4
   .card-body.text-center
     p どんな遊びが出てくるかは押してみてのお楽しみ！
-    button.btn.btn-primary.btn-raised.btn-lg.btn-block Asobiガチャ
+    button.btn.btn-highlight.btn-raised.btn-lg.btn-block Asobiガチャ
