--- a/app/views/layouts/article_show.html.slim
+++ b/app/views/layouts/article_show.html.slim
@@ -1,17 +1,15 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body
+  body.bgcolor-bg
     = render partial: 'shared/header'
     .container.container-width-custom.py-4
       = render partial: 'shared/flash'
       .row
         .col-md-1
           = yield(:items)
-        main.col-md-8
+        main.col-md-11
           = yield
-        aside.col-md-3
-          = yield(:sidemenu)
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
