--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,8 +1,9 @@
 // @import '~bootstrap/scss/bootstrap';
-@import '~bootstrap-material-design/scss/bootstrap-material-design';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~bootstrap-material-design/scss/bootstrap-material-design';
 @import "./actiontext";
 
 @import "./valiables";
 @import "./custom";
 @import "./custom_button";
+@import "./custom_article_show";
