--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -23,3 +23,12 @@
     = set_thumbnail(@article, class_name: 'card-img-top mx-auto w-100')
 
     p == @article.content
+
+.card.boarder.text-left
+  .content.body
+    - @article.comments.each do |comment|
+      = render partial: 'shared/article/comment', locals: { user: comment.user, comment: comment }
+    = form_with model: current_user.comments.new, local: true do |f|
+      = f.hidden_field :article_id, value: @article.id
+      = f.text_area :content, class: 'form-control'
+      = f.submit '投稿する', class: 'btn btn-primary btn-raised'
