--- a/app/views/user_mailer/account_activation.html.slim
+++ b/app/views/user_mailer/account_activation.html.slim
@@ -1,4 +1,4 @@
 h1 Asobi
-p こんにちは、#{@user.name}さん
-p Asobiへようこそ！下記のURLへアクセスして、本登録を完了してください
-/ = link_to 'Sign Up!', edit_account_activation_url(@user.activation_token, email: @user.email)
+p 初めまして、#{@user.name}さん！
+p Asobiへようこそ！下記のボタンから本登録を完了してください！
+= link_to '本登録', edit_account_activation_url(@user.activation, email: @user.email)
