--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -1,17 +1,18 @@
 = content_for(:title, @article.title)
 
-= content_for(:items) do
-  - if current_user.already_favorite?(@article)
-    = link_to favorite_path(article_id: @article.id), method: :delete, class: 'btn btn-danger bmd-btn-fab'
-      .material-icons
-        i.fas.fa-star
-  - else
-    = link_to favorites_path(article_id: @article.id), method: :post, class: 'btn btn-primary bmd-btn-fab'
-      i.fas.fa-star.btn-icon
-  = link_to '#', class: 'btn btn-primary bmd-btn-fab'
-    i.fas.fa-comment-dots
-  = link_to '#', class: 'btn btn-primary bmd-btn-fab'
-    i.fab.fa-twitter
+- if logged_in?
+  = content_for(:items) do
+    - if current_user.already_favorite?(@article)
+      = link_to favorite_path(article_id: @article.id), method: :delete, class: 'btn btn-danger bmd-btn-fab'
+        .material-icons
+          i.fas.fa-star
+    - else
+      = link_to favorites_path(article_id: @article.id), method: :post, class: 'btn btn-primary bmd-btn-fab'
+        i.fas.fa-star.btn-icon
+    = link_to '#', class: 'btn btn-primary bmd-btn-fab'
+      i.fas.fa-comment-dots
+    = link_to '#', class: 'btn btn-primary bmd-btn-fab'
+      i.fab.fa-twitter
 
 .card.boarder.text-left
   .card-header
@@ -28,7 +29,8 @@
   .content.body
     - @article.comments.each do |comment|
       = render partial: 'shared/article/comment', locals: { user: comment.user, comment: comment }
-    = form_with model: current_user.comments.new, local: true do |f|
-      = f.hidden_field :article_id, value: @article.id
-      = f.text_area :content, class: 'form-control'
-      = f.submit '投稿する', class: 'btn btn-primary btn-raised'
+    - if logged_in?
+      = form_with model: current_user.comments.new, local: true do |f|
+        = f.hidden_field :article_id, value: @article.id
+        = f.text_area :content, class: 'form-control'
+        = f.submit '投稿する', class: 'btn btn-primary btn-raised'
