--- a/app/views/shared/_head.html.slim
+++ b/app/views/shared/_head.html.slim
@@ -4,4 +4,5 @@
     = csrf_meta_tags
     = csp_meta_tag
     = javascript_pack_tag 'application'
+    = javascript_pack_tag javascript_path
     = stylesheet_pack_tag 'application', component: 'all'
