--- a/app/frontend/stylesheets/_custom_button.scss
+++ b/app/frontend/stylesheets/_custom_button.scss
@@ -40,14 +40,14 @@ $color in $custom_colors {
 //   }
 // }
 
-.btn {
-  .btn-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: $bmd-btn-fab-font-size;
-    line-height: $bmd-btn-fab-font-size;
-    transform: translate(-($bmd-btn-fab-font-size / 2),
-        -($bmd-btn-fab-font-size / 2));
-  }
-}
+// .btn {
+//   .btn-icon {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     width: $bmd-btn-fab-font-size;
+//     line-height: $bmd-btn-fab-font-size;
+//     transform: translate(-($bmd-btn-fab-font-size / 2),
+//         -($bmd-btn-fab-font-size / 2));
+//   }
+// }
