--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -1,3 +1,4 @@
+// @import 'media/fonts/memoir-round-c63b435d0161341b85dd2b9262eef3ee.otf';
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 // @import '~bootstrap-material-design/scss/bootstrap-material-design';
@@ -5,5 +6,6 @@
 
 @import "./valiables";
 @import "./custom";
+@import "./separator";
 @import "./custom_button";
 @import "./custom_article_show";
