--- a/app/frontend/stylesheets/_custom.scss
+++ b/app/frontend/stylesheets/_custom.scss
@@ -1,7 +1,36 @@
-// $background_color: #F9ED69;
-// $header_color: #F08A5D;
-// $footer_color: #F08A5D;
 $max-width-size: 1200px;
+
+// TODO フォントの適応
+@font-face {
+  font-family: 'memoir';
+  src: url("../fonts/memoir-round.otf") format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+// @font-face {
+//   font-family: 'Montserrat';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url("../fonts/memoir-round.otf");
+//   /* IE9 Compat Modes */
+//   src: local('Montserrat Regular'), local('Montserrat-Regular'),
+//     url("../images/fonts/montserrat-v12-latin/montserrat-v12-latin-regular.eot?#iefix") format('embedded-opentype'),
+//     /* IE6-IE8 */
+//     url("../images/fonts/montserrat-v12-latin/montserrat-v12-latin-regular.woff2") format('woff2'),
+//     /* Super Modern Browsers */
+//     url("../images/fonts/montserrat-v12-latin/montserrat-v12-latin-regular.woff") format('woff'),
+//     /* Modern Browsers */
+//     url("../images/fonts/montserrat-v12-latin/montserrat-v12-latin-regular.ttf") format('truetype'),
+//     /* Safari, Android, iOS */
+//     url("../images/fonts/montserrat-v12-latin/montserrat-v12-latin-regular.svg#Montserrat") format('svg');
+//   /* Legacy iOS */
+// }
+
+html {
+  font-family: 'memoir';
+  font-size: 15px;
+}
 
 .bgcolor-bg {
   background: $background_color;
