--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,2 +1,5 @@
 - flash.each do |key, value|
-  div class="alert alert-#{key}" = value
+  div class="alert alert-#{key} alert-dismissible fade show" role='alert'
+    button.close type="button" data-dismiss="alert" aria-label="Close"
+      span aria-hidden="true" &times;
+    = value
