--- a/app/views/shared/session/_form.html.slim
+++ b/app/views/shared/session/_form.html.slim
@@ -1,24 +1,20 @@
 - if local_assigns[:signup_flag].present?
-  .form-group
-    = f.label :name, class: 'form-label'
-    = f.text_field :name, class: 'form-control'
-.form-group
-  = f.label :email, class: 'form-label'
-  = f.email_field :email, class: 'form-control'
-.form-group
-  = f.label :password, class: 'form-label'
-  = f.password_field :password, class: 'form-control'
+  .mb-3
+    = render partial: 'shared/parts/input_field', locals: { f: f, value: :name, icon: 'fas fa-fw fa-user', placeholder: 'ユーザーID', notes: '英数字とアンダースコア(_)で4~15文字' }
+.mb-3
+  = render partial: 'shared/parts/email_field', locals: { f: f, value: :email, placeholder: 'メールアドレス', notes: '' }
+.mb-3
+  = render partial: 'shared/parts/password_field', locals: { f: f, value: :password, placeholder: 'パスワード', notes: '8文字以上の英数字' }
 - if local_assigns[:signup_flag].present?
-  .form-group
-    = f.label :password_confirmation, class: 'form-label'
-    = f.password_field :password_confirmation, class: 'form-control'
+  .mb-3
+    = render partial: 'shared/parts/password_field', locals: { f: f, value: :password_confirmation, placeholder: 'パスワード(確認用)', notes: '' }
 - else
-  .form-group.form-check
-    = f.check_box :remember_check, class: 'form-check-input'
-    = f.label :remember_check, 'ログイン状態を保持する', class: 'form-check-label'
+  .custom-control.custom-checkbox
+    = f.check_box :remember_check, class: 'custom-control-input'
+    = f.label :remember_check, 'ログイン状態を保持する', class: 'custom-control-label'
 hr
 .form-group
   - if local_assigns[:signup_flag].present?
-    = f.submit '登録する', class: 'btn btn-primary btn-block'
+    = f.submit '登録する', class: 'btn btn-block btn-main'
   - else
-    = f.submit 'ログイン', class: 'btn btn-primary'
+    = f.submit 'ログイン', class: 'btn btn-block btn-main'
