--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -2,17 +2,11 @@
 
 - if logged_in?
   = content_for(:items) do
-    - if current_user.already_favorite?(@article)
-      = link_to favorite_path(article_id: @article.id), method: :delete, class: 'btn btn-danger'
-        i.fas.fa-star.fa-fw
-    - else
-      = link_to favorites_path(article_id: @article.id), method: :post, class: 'btn btn-primary'
-        i.fas.fa-star.fa-fw
+    favorite-button v-bind:article-id='#{@article.id}' v-bind:is-favorited='#{current_user.already_favorite?(@article)}' v-bind:favorite-count=@article.favorites.count
     = link_to '#', class: 'btn btn-primary'
       i.fas.fa-comment-dots.fa-fw
     = link_to '#', class: 'btn btn-primary'
       i.fab.fa-twitter.fa-fw
-    button.btn.btn-main @click='countUp(); ajaxRequest(#{@article.id});' = '{{counter}}'
 
 .card.boarder.text-left
   .card-header
