--- a/app/frontend/stylesheets/_custom_button.scss
+++ b/app/frontend/stylesheets/_custom_button.scss
@@ -1,35 +1,53 @@
 @each $key,
 $color in $custom_colors {
+  // .btn-#{$key} {
+  //   background: $color; //ボタンの背景色
+  //   color: white; //ボタンのテキストの色
+  // }
+
+  // .btn-#{$key}:hover,
+  // .btn-#{$key}:focus,
+  // .btn-#{$key}:active,
+  // .btn-#{$key}:active:focus,
+  // .btn-#{$key}:active:hover,
+  // .btn-#{$key}:active.focus,
+  // .btn-#{$key}.active,
+  // .btn-#{$key}.active:focus,
+  // .btn-#{$key}.active:hover,
+  // .btn-#{$key}.active.focus,
+  // .open>.dropdown-toggle.btn-#{$key},
+  // .open>.dropdown-toggle.btn-#{$key}:hover,
+  // .open>.dropdown-toggle.btn-#{$key}:focus,
+  // .open>.dropdown-toggle.btn-#{$key}.focus,
+  // .btn-#{$key}.disabled:hover,
+  // .btn-#{$key}[disabled]:hover,
+  // fieldset[disabled] .btn-#{$key}:hover,
+  // .btn-#{$key}.disabled:focus,
+  // .btn-#{$key}[disabled]:focus,
+  // fieldset[disabled] .btn-#{$key}:focus,
+  // .btn-#{$key}.disabled.focus,
+  // .btn-#{$key}[disabled].focus,
+  // fieldset[disabled] .btn-#{$key}.focus {
+  //   background: darken($color, 7%); //ボタンの上にポインタを持ってきたり、クリックしたりした時の背景色
+  //   color: white; //ボタンの上にポインタを持ってきたり、クリックしたりした時のテキストの色
+  // }
+
   .btn-#{$key} {
-    background: $color; //ボタンの背景色
-    color: white; //ボタンのテキストの色
+    @include button-variant($color, $color);
   }
 
-  .btn-#{$key}:hover,
-  .btn-#{$key}:focus,
-  .btn-#{$key}:active,
-  .btn-#{$key}:active:focus,
-  .btn-#{$key}:active:hover,
-  .btn-#{$key}:active.focus,
-  .btn-#{$key}.active,
-  .btn-#{$key}.active:focus,
-  .btn-#{$key}.active:hover,
-  .btn-#{$key}.active.focus,
-  .open>.dropdown-toggle.btn-#{$key},
-  .open>.dropdown-toggle.btn-#{$key}:hover,
-  .open>.dropdown-toggle.btn-#{$key}:focus,
-  .open>.dropdown-toggle.btn-#{$key}.focus,
-  .btn-#{$key}.disabled:hover,
-  .btn-#{$key}[disabled]:hover,
-  fieldset[disabled] .btn-#{$key}:hover,
-  .btn-#{$key}.disabled:focus,
-  .btn-#{$key}[disabled]:focus,
-  fieldset[disabled] .btn-#{$key}:focus,
-  .btn-#{$key}.disabled.focus,
-  .btn-#{$key}[disabled].focus,
-  fieldset[disabled] .btn-#{$key}.focus {
-    background: darken($color, 7%); //ボタンの上にポインタを持ってきたり、クリックしたりした時の背景色
-    color: white; //ボタンの上にポインタを持ってきたり、クリックしたりした時のテキストの色
+  .btn-outline-#{$key} {
+    @include button-outline-variant($color);
+  }
+}
+
+.btn {
+  .btn-unfollow {
+
+    &:hover {
+      background: $sub_highlight_color;
+      color: white;
+    }
   }
 }
 
