--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -19,8 +19,6 @@
 
     p == @article.content
 
-.card.boarder.text-left
-  .content.body
     - @article.comments.each do |comment|
       = render partial: 'shared/article/comment', locals: { user: comment.user, comment: comment }
     - if logged_in?
@@ -28,3 +26,7 @@
         = f.hidden_field :article_id, value: @article.id
         = f.text_area :content, class: 'form-control'
         = f.submit '投稿する', class: 'btn btn-primary btn-raised'
+
+      comment-form v-bind:article-id="#{@article.id}"
+/ .card.boarder.text-left
+  .content.body
