--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html lang = 'ja'
     = render partial: 'shared/header'
     = yield(:jumbotron)
     .container.container-width-custom.py-4
-      = render partial: 'shared/flash'
+      / = render partial: 'shared/flash'
       .row
         main.col-md-9
           = yield
