--- a/app/views/layouts/left_sidemenu.html.slim
+++ b/app/views/layouts/left_sidemenu.html.slim
@@ -4,7 +4,7 @@ html lang = 'ja'
   body
     = render partial: 'shared/header'
     .container.container-width-custom.py-4
-      = render partial: 'shared/flash'
+      / = render partial: 'shared/flash'
       .row
         aside.col-md-3
           = yield(:sidemenu)
