--- a/app/views/layouts/no_sidemenu.html.slim
+++ b/app/views/layouts/no_sidemenu.html.slim
@@ -3,7 +3,7 @@ html lang = 'ja'
   = render partial: 'shared/head'
   body.bgcolor-bg
     .container.container-width-custom.py-4
-      = render partial: 'shared/flash'
+      / = render partial: 'shared/flash'
       main.row
         = yield
     = render partial: 'shared/footer'
