--- a/app/views/shared/_head.html.slim
+++ b/app/views/shared/_head.html.slim
@@ -6,3 +6,4 @@
     = javascript_pack_tag 'application'
     = javascript_pack_tag javascript_path
     = stylesheet_pack_tag 'application', component: 'all'
+    = render partial: 'shared/flash'
