--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -9,8 +9,8 @@ footer.nav.navbar-expand-lg.navbar-dark.bgcolor-footer
         = link_to 'プライバシーポリシー', privacy_path, class: 'nav-link'
       li.nav-item
         = link_to 'ヘルプ', help_path, class: 'nav-link'
-      li.nav-item
+      / li.nav-item
         = link_to 'ユーザー', users_path, class: 'nav-link'
-      li.nav-item
+      / li.nav-item
         = link_to '記事', :articles, class: 'nav-link'
     .text-center.text-light.py-2 Copyright © sasakura_870 2019
