--- a/app/frontend/stylesheets/_custom.scss
+++ b/app/frontend/stylesheets/_custom.scss
@@ -56,17 +56,17 @@ html {
   width: 90% !important;
 }
 
-.text-gold {
-  color: gold;
-}
+// .text-gold {
+//   color: gold;
+// }
 
-.text-silver {
-  color: silver;
-}
+// .text-silver {
+//   color: silver;
+// }
 
-.text-copper {
-  color: sienna;
-}
+// .text-copper {
+//   color: sienna;
+// }
 
 pre.debug_dump {
   max-width: 1200px;
