--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -7,5 +7,6 @@
 @import "./custom";
 @import "./separator";
 @import "./custom_button";
+@import "./custom_text";
 @import "./custom_card";
 @import "./custom_article_show";
