--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -3,9 +3,9 @@
 - if logged_in?
   = content_for(:items) do
     favorite-button v-bind:article-id='#{@article.id}' v-bind:is-favorited='#{current_user.already_favorite?(@article)}' v-bind:favorite-count=@article.favorites.count
-    = link_to '#', class: 'btn btn-primary'
+    = link_to '#', class: 'btn btn-primary btn-round'
       i.fas.fa-comment-dots.fa-fw
-    = link_to '#', class: 'btn btn-primary'
+    = link_to '#', class: 'btn btn-primary btn-round'
       i.fab.fa-twitter.fa-fw
 
 .card.boarder.text-left.mb-4
