--- a/app/views/layouts/left_sidemenu.html.slim
+++ b/app/views/layouts/left_sidemenu.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
-  body
+  body.bgcolor-bg
     = render partial: 'shared/header'
     .container.container-width-custom.py-4
       / = render partial: 'shared/flash'
