--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -1,22 +1,24 @@
 .card
   .card-body
     h1.text-center アカウント設定
-    .row
-      .col-md-8
-        .mb-4
-          h4 メールアドレスの変更
-          = form_with model: current_user, local: true do |f|
-            = f.hidden_field :id
-            .form-group
-              = f.label :email, class: 'form-label'
-              = f.email_field :email, class: 'form-control', placeholder: 'メールアドレス'
-            = f.submit '変更する', class: 'btn btn-main'
+    = render partial: 'shared/error_messages', locals: { model: current_user }
+    .mb-4
+      h4 メールアドレスの変更
+      = form_with model: current_user, scope: :account, url: settings_account_path(current_user), method: :patch, local: true do |f|
+        = f.hidden_field :id
+        .form-group
+          = f.label :email, class: 'form-label'
+          = f.email_field :email, class: 'form-control', placeholder: 'メールアドレス'
+        = f.submit '変更する', class: 'btn btn-main'
+      br
 
-        .mb-4
-          h4 永続ログインの設定
-          / = form_with
+    .mb-4
+      h4 永続ログインの設定
+      p 永続ログインを設定すると、次回から自動でログインされます。
+      button.btn.btn-primary 永続ログインの設定
+      br
 
-        .mb-4
-          h4 アカウントの削除
-          p: strong アカウントを削除すると二度と元に戻せません。ご注意ください。
-          = link_to 'アカウント削除', '#', class: 'btn btn-danger'
+    .mb-4
+      h4 アカウントの削除
+      p: strong アカウントを削除すると二度と元に戻せません。ご注意ください。
+      = link_to 'アカウント削除', '#', class: 'btn btn-danger'
