--- a/app/views/settings/profile/index.html.slim
+++ b/app/views/settings/profile/index.html.slim
@@ -3,12 +3,12 @@
     h1.text-center プロフィールの編集
     .row
       .col-md-8
+        = render partial: 'shared/error_messages', locals: { model: current_user }
         = form_with model: current_user, scope: :profile, url: settings_profile_path(current_user), method: :patch, local: true do |f|
-          = f.hidden_field :id
           .form-group
             = f.label :name, class: 'form-label'
             = f.text_field :name, class: 'form-control', placeholder: 'ユーザーID'
-            small.text-muted 英数字とアンダースコア(_)で4~15文字
+            small.text-muted 英数字とアンダースコア(_)のみ利用可能です。4~15文字で入力してください。
           .form-group
             = f.label :nick_name, class: 'form-label'
             = f.text_field :nick_name, class: 'form-control', placeholder: 'ニックネーム'
