--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -4,19 +4,24 @@
     = render partial: 'shared/error_messages', locals: { model: current_user }
     .mb-4
       h4 メールアドレスの変更
+      p.text-main メールアドレス変更後は仮登録の状態に戻ります。変更後は送られてきたメールから再度本登録を行ってください。
       = form_with model: current_user, scope: :account, url: settings_account_path(current_user), method: :patch, local: true do |f|
         = f.hidden_field :id
         .form-group
           = f.label :email, class: 'form-label'
           = f.email_field :email, class: 'form-control', placeholder: 'メールアドレス'
+        - if current_user.temporary?
+          p: small.text-muted
+            | 本登録が完了していません。本登録用メールを送信するには
+            = link_to 'こちらをクリックしてください', '#'
         = f.submit '変更する', class: 'btn btn-main'
-      br
+      hr
 
     .mb-4
       h4 永続ログインの設定
       p 永続ログインを設定すると、次回から自動でログインされます。
-      button.btn.btn-primary 永続ログインの設定
-      br
+      button.btn.btn-main 永続ログインの設定
+      hr
 
     .mb-4
       h4 アカウントの削除
