--- a/app/views/settings/profile/index.html.slim
+++ b/app/views/settings/profile/index.html.slim
@@ -1,6 +1,6 @@
 .card
   .card-body
-    h1.text-center プロフィールの編集
+    h1.card-title.text-center プロフィールの編集
     .row
       .col-md-8
         = render partial: 'shared/error_messages', locals: { model: current_user }
