--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -1,6 +1,6 @@
 .card
   .card-body
-    h1.text-center アカウント設定
+    h1.card-title.text-center アカウント設定
     = render partial: 'shared/error_messages', locals: { model: current_user }
     .mb-4
       h4 メールアドレスの変更
@@ -26,4 +26,4 @@
     .mb-4
       h4 アカウントの削除
       p: strong アカウントを削除すると二度と元に戻せません。ご注意ください。
-      = link_to 'アカウント削除', '#', class: 'btn btn-danger'
+      = link_to 'アカウント削除', settings_quit_index_path, class: 'btn btn-danger'
