--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -20,7 +20,7 @@
     #remember-form.mb-4
       h4 永続ログインの設定
       p 永続ログインを設定すると、次回から自動でログインされます。
-      remember-button v-bind:is-remembered='#{cookies.has_key? :remember}'
+      remember-button :is-remembered='#{cookies.has_key? :remember}'
       hr
 
     .mb-4
