--- a/app/views/shared/article/_comment.html.slim
+++ b/app/views/shared/article/_comment.html.slim
@@ -4,4 +4,4 @@ div id="comment-#{comment.id}"
   p.text-muted = comment.updated_at
   p = comment.content
   - if logged_in? && user == current_user
-    comment-delete-button v-bind:comment-id="#{comment.id}"
+    comment-delete-button :comment-id="#{comment.id}"
