--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,3 +15,4 @@ html lang = 'ja'
     - if Rails.env.development?
       = debug(params)
       = debug(session[:return_to])
+    = render partial: 'shared/flash'
