--- a/app/views/layouts/no_sidemenu.html.slim
+++ b/app/views/layouts/no_sidemenu.html.slim
@@ -9,3 +9,4 @@ html lang = 'ja'
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
+    = render partial: 'shared/flash'
