--- a/app/views/drafts/index.html.slim
+++ b/app/views/drafts/index.html.slim
@@ -1,16 +1,15 @@
 = content_for(:title, '下書き一覧')
 
-h1 下書き一覧(#{@articles.count}/10件)
-table.table.table-hover
-  - if @articles.any?
-    thead
-      tr
-        th #
-        th タイトル
-    - @articles.each_with_index do |article, i|
-      tr
-        th = i + 1
-        td = link_to(article.title, edit_article_path(article))
-        td = link_to('削除', '#', class: 'btn btn-danger')
-  - else
-    th 下書きはありません
+#draft-table.card.col-12
+  .card-body
+    h1.card-title.mb-4 下書き一覧(#{@drafts.count}/10件)
+    .card-text
+      table.table.table-hover
+        - if @drafts.any?
+          tbody
+            - @drafts.each do |draft|
+              tr
+                td scope='row' = link_to(draft.title, edit_article_path(draft))
+                td: delete-draft-button :article-id="#{draft.id}"
+        - else
+          th 下書きはありません
