--- a/app/views/layouts/drafts.html.slim
+++ b/app/views/layouts/drafts.html.slim
@@ -2,10 +2,12 @@ doctype html
 html lang = 'ja'
   = render partial: 'shared/head'
   body.bgcolor-bg
+    = render partial: 'shared/header'
     .container.container-width-custom.py-4
       main.row
         = yield
     = render partial: 'shared/footer'
     - if Rails.env.development?
       = debug(params)
+      = debug(session[:return_to])
     = render partial: 'shared/flash'
