remove 下書きの上限数(10まで)を削除
不必要と判断したため

--- a/app/views/drafts/index.html.slim
+++ b/app/views/drafts/index.html.slim
@@ -2,7 +2,7 @@
 
 #draft-table.card.col-12
   .card-body
-    h1.card-title.mb-4 下書き一覧(#{@drafts.count}/10件)
+    h1.card-title.mb-4 下書き一覧
     .card-text
       table.table.table-hover
         - if @drafts.any?
