--- a/app/views/drafts/index.html.slim
+++ b/app/views/drafts/index.html.slim
@@ -13,3 +13,4 @@
                 td: delete-draft-button :article-id="#{draft.id}"
         - else
           th 下書きはありません
+      = paginate @drafts
