--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -4,6 +4,10 @@
 @import "./actiontext";
 
 @import "./valiables";
+@import "./section";
+@import "./list-item";
+@import "./button";
+
 @import "./custom";
 @import "./separator";
 @import "./custom_button";
