--- a/app/views/shared/article/_comment.html.slim
+++ b/app/views/shared/article/_comment.html.slim
@@ -1,4 +1,13 @@
 div id="comment-#{comment.id}"
+  .list-item
+    .list-item__header
+      = set_user_link user
+      = link_to user.name, user
+    .list-item__body
+      p = comment.content
+    .list-item__footer
+      comment-delete-button :comment-id="#{comment.id}"
+/ div id="comment-#{comment.id}"
   hr
   = set_user_link user
   p.text-muted = comment.updated_at
