--- a/app/frontend/stylesheets/application.scss
+++ b/app/frontend/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "./actiontext";
 
 @import "./valiables";
+@import "./mixins";
 @import "./section";
 @import "./list-item";
 @import "./button";
