--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -16,6 +16,10 @@
     p.card-subtitle.text-muted.mb-4 = @article.overview if @article.overview.present?
     h1.desplay-1 = @article.title
     = set_thumbnail(@article, class_name: 'card-img-top mx-auto w-100')
+    ul
+      - @article.tags.each do |tag|
+        li = link_to tag.name, tag
+
 
     p == @article.content
 
