--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -1,5 +1,5 @@
 - unless logged_in?
-  = content_for(:jumbotron) do
+  = content_for(:jumbotron)
     .jumbotron.jumbotron-fluid.bgcolor-header.text-white
       .container
         .row
