--- a/app/frontend/stylesheets/_button.scss
+++ b/app/frontend/stylesheets/_button.scss
@@ -1,14 +1,18 @@
 .button {
   display: inline-block;
-  padding: 0.3em 1em;
+  padding: 0.5em 1em;
   text-decoration: none;
-  color: #67c5ff;
-  border: solid 2px #67c5ff;
-  border-radius: 3px;
-  transition: .4s;
+  background: #f7f7f7;
+  border-left: solid 6px #ff7c5c;
+  /*左線*/
+  color: #ff7c5c;
+  /*文字色*/
+  font-weight: bold;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  ;
 
   &:hover {
-    background: #67c5ff;
-    color: white;
+    box-shadow: inset 0 0 2px rgba(128, 128, 128, 0.1);
+    transform: translateY(2px);
   }
 }
