--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -23,12 +23,13 @@
 
     p == @article.content
 
-.section
+/ .section
   - @article.comments.each do |comment|
     = render partial: 'shared/article/comment', locals: { user: comment.user, comment: comment }
     button.button hogeaaaaaa
 
-  / .card-body
+.card style='background: gray;'
+  .card-body
     - @article.comments.each do |comment|
       = render partial: 'shared/article/comment', locals: { user: comment.user, comment: comment }
     - if logged_in?
