--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -3,11 +3,15 @@
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "./actiontext";
 
-@import "./valiables";
-@import "./mixins";
-@import "./section";
-@import "./list-item";
-@import "./button";
+// foundation
+@import "./foundation/variables";
+
+// component
+@import "./object/component/outline_button";
+@import "./object/component/button";
+
+// utility
+@import "./object/utility/spacer";
 
 @import "./custom";
 @import "./separator";
