--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -1,15 +1,26 @@
+// カラー
 $background_color: #F9ED69;
 $main_color: #F08A5D;
 $highlight_color: #6A2C70;
 $sub_highlight_color: #B83B5E;
 $main_dark_tone_color: #B1552C;
+$primary_color: #518CFC;
+$danger_color: #DC3445;
 
 $header_color: $main_color;
 $footer_color: $main_color;
 
-// 追加したカスタムカラー
 $custom_colors: (bg: $background_color,
   main: $main_color,
   highlight: $highlight_color,
   sub-highlight: $sub_highlight_color,
-  dark-tone: $main_dark_tone_color);
+  dark-tone: $main_dark_tone_color,
+  primary: $primary_color,
+  danger: $danger_color);
+
+$spacers: (0: 0,
+  1: .25rem,
+  2: .5rem,
+  3: 1rem,
+  4: 1.5rem,
+  5: 3rem)
