--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -9,6 +9,7 @@
 // component
 @import "./object/component/outline_button";
 @import "./object/component/button";
+@import "./object/component/text_field";
 
 // utility
 @import "./object/utility/spacer";
