--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -10,6 +10,8 @@ $danger_color: #DC3445;
 $header_color: $main_color;
 $footer_color: $main_color;
 
+$general_line_color: #939393;
+
 $custom_colors: (bg: $background_color,
   main: $main_color,
   highlight: $highlight_color,
