--- a/app/frontend/scss/object/component/_outline_button.scss
+++ b/app/frontend/scss/object/component/_outline_button.scss
@@ -1,6 +1,6 @@
 @mixin outline-btn-color-extension($color) {
   color: $color;
-  border: solid 2px $color;
+  border: 2px solid $color;
 
   &:hover {
     background: $color;
