--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -34,6 +34,9 @@
         .input-group.u-mb2
           = f.text_area :content, class: 'form-control', required: true, rows: 4
         = f.submit '投稿する', class: 'c-btn'
+      .c-text-field
+        input.c-text-field__input-form type='text' placeholder='hogehoge'
+        .c-text-field__icon: i.fas.fa-fw.fa-user.fa-lg
 
 
 .p-comment-item
